Agrega navbar y sidebar

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,15 +16,43 @@
         <nav class="navbar_tittle">
           <img class="nav_img" src="./imgs/logocar.png" alt="logo carro" />
           <p>Electric Cars</p>
-          <button class="btn">
-            <i class="fa-solid fa-bars"></i>
-          </button>
+          <div class="btn_icon">
+            <button class="btn_i">
+              <i class="fa-solid fa-bars"></i>
+            </button>
+          </div>
         </nav>
       </div>
     </header>
-    <aside class="aside"></aside>
+    <aside class="aside">
+      <div class="container">
+        <div class="categories">
+          <p>Incio</p>
+          <p>Catalogo</p>
+          <p>Ofertas</p>
+          <p>Contactos</p>
+        </div>
+      </div>
+    </aside>
     <main class="main"></main>
-
+    <div class="card">
+      <figure class="card_img">
+        <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+      </figure>
+      <div class="card_text">
+        <h3><span>Model City Car</span></h3>
+      </div>
+      <div class="card_btn">
+        <button class="btn_car">Ver mas</button>
+      </div>
+    </div>
+    <div class="pagination">
+      <button>«</button>
+      <button>1</button>
+      <button>2</button>
+      <button>3</button
+      ><button>»</button>
+    </div>
     <footer class="footer"></footer>
   </body>
 </html>
