--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Electric Cars</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css " />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu"
@@ -29,7 +29,11 @@
       <aside class="sidebar">
         <div class="logo">
           <div class="container_logo">
-            <img class="nav_img" src="./imgs/logocar.png" alt="logo carro" />
+            <img
+              class="nav_img"
+              src="./assets/imgs/logocar.png"
+              alt="logo carro"
+            />
           </div>
           <div class="logo_tittle">
             <p>Electric Cars</p>
@@ -62,7 +66,7 @@
         <div class="container">
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -74,7 +78,7 @@
 
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -86,7 +90,7 @@
 
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -98,7 +102,7 @@
 
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -110,7 +114,7 @@
 
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -122,7 +126,7 @@
 
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -134,7 +138,7 @@
 
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -146,7 +150,7 @@
 
           <div class="card">
             <figure class="card_img">
-              <img src="./imgs/imagencarro.jpg" alt="imagen carro" />
+              <img src="./assets/imgs/imagencarro.jpg" alt="imagen carro" />
             </figure>
             <div class="card_text">
               <h3><span>Model City Car</span></h3>
@@ -169,14 +173,17 @@
       </main>
       <footer class="footer">
         <button class="btn_footer">
-           <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
         </button>
         <div class="footer_tittle">
           <p>Todos los derechos reservados</p>
         </div>
       </footer>
     </div>
-     <script src="https://kit.fontawesome.com/8c0839d651.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/8c0839d651.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
